tests/paczka2/big_fuzzy/38600008.err
Error in line 15: A49 A49 57,7
Error in line 22: Whjml2nnL5 S681 1,8
Error in line 24: Whjml2nnL5 A139 1,8
Error in line 29: 3jGCvVCszye A139 44,3
Error in line 23: T95gWmp A49 23,9
Error in line 39: A49 A139 96,6
Error in line 49: T95gWmp S681 29,1
Error in line 50: A49 A533 0,0
Error in line 64: Whjml2nnL5 S681 88,4
Error in line 72: A49 A533 97,3
Error in line 81: swC2 A49 74,1
Error in line 74: A49 S681 26,8
Error in line 82: swC2 A139 1,0
Error in line 83: aYo A139 12,9
Error in line 91: Whjml2nnL5 S681 16,2
Error in line 98: swC2 A533 221,34
Error in line 97: 3jGCvVCszye A139 13,2
Error in line 93: aYo S681 69,4
Error in line 113: swC2 A49 20,10
Error in line 118: J7e A49 17,0
Error in line 126: swC2 A49 19,7
Error in line 132: 3jGCvVCszye A49 71,8
Error in line 133: 3jGCvVCszye S681 27,8
Error in line 143: 3jGCvVCszye A533 27,0
Error in line 144: Whjml2nnL5 A49 185,1
Error in line 155: Whjml2nnL5 A533 37,8
Error in line 116: A49 S681 4,7
Error in line 158: A49 A533 45,6
Error in line 162: aYo A533 5,71
Error in line 173: A49 A139 84,5
Error in line 175: A49 S681 46,1
Error in line 178: aYo A533 69,6
Error in line 181: J7e S681 33,1
Error in line 182: aYo A139 67,4
Error in line 194: swC2 S681 88,3
Error in line 172: 3jGCvVCszye A139 92,4
Error in line 196: aYo A49 68,8
Error in line 202: A49 A49 61,0
Error in line 228: 3jGCvVCszyeA53339,9
Error in line 229: 3jGCvVCszye A533 94,2
Error in line 231: 3jGCvVCszye S681 63,4
Error in line 234: 3jGCvVCszye A533 -1,9
Error in line 232: 3jGCvVCszye A533 7,0
Error in line 233: T95gWmp A533 87,4
Error in line 217: J7e A533 87,4
